# bevy-ws-benchmark

./: .dockerignore  Cargo.toml  Dockerfile  README.md
src/: bevy_server.rs  client.rs  server.rs
src/ecs/: components.rs  mod.rs  systems.rs
