[package]
name = "rust-ws-benchmark"
version = "0.1.0"
edition = "2024"

# Optimization profiles for faster compilation
[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.release]
opt-level = 2
debug = false
strip = true
lto = false
codegen-units = 16
panic = "abort"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
bevy = "0.12"
scc = "2.1"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "bevy-server"
path = "src/bevy_server.rs"
